# V-Lang

./: CMakeLists.txt  lang-definition.txt  lang-example-v1.txt  lang-example.txt  main.cpp  makefile  temp.c  temp.v  temp1.v
include/: Lexer.hpp  Parser.hpp  StaticCheck.hpp
src/: CodeGeneration.cpp  CodeGeneration.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  StaticCheck.cpp  StaticCheck.hpp
